<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/lblUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblUsuario"
        android:textColor="#020202"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.157"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.151" />

    <TextView
        android:id="@+id/lblContraseña"
        android:layout_width="66dp"
        android:layout_height="23dp"
        android:layout_marginTop="60dp"
        android:text="@string/lblContraseña"
        android:textColor="#020202"
        app:layout_constraintStart_toStartOf="@+id/lblUsuario"
        app:layout_constraintTop_toBottomOf="@+id/lblUsuario" />

    <EditText
        android:id="@+id/editTextErabiltzailea"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="Email-a"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="#BC0E0E"
        app:layout_constraintStart_toEndOf="@+id/lblUsuario"
        app:layout_constraintTop_toTopOf="@+id/lblUsuario" />

    <View
        android:id="@+id/divider"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_marginTop="304dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnIniciarSesion"
        android:layout_width="212dp"
        android:layout_height="0dp"
        android:layout_marginStart="96dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="#FF1919"
        android:text="@string/btnSartu"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <EditText
        android:id="@+id/editTextPasahitza"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:ems="10"
        android:hint="Sartu pasahitza"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColorHint="#BC0E0E"
        app:layout_constraintStart_toEndOf="@+id/lblContraseña"
        app:layout_constraintTop_toTopOf="@+id/lblContraseña" />

    <Button
        android:id="@+id/btnPruebaActivar"
        android:layout_width="209dp"
        android:layout_height="42dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="#504C4C"
        android:text="Button"
        app:layout_constraintStart_toStartOf="@+id/btnIniciarSesion"
        app:layout_constraintTop_toBottomOf="@+id/btnIniciarSesion" />

    <TextView
        android:id="@+id/txtPruebaProd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="96dp"
        android:layout_marginTop="36dp"
        android:text="TextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnPruebaActivar" />

</androidx.constraintlayout.widget.ConstraintLayout>